Wrong dir for the slick slider, edited css

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ $( "#dialog-link2" ).click(function( event ) {
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="/slick/slick/slick.min.js"></script>
+<script type="text/javascript" src="/slick-master/slick/slick.min.js"></script>
       
 <script>  
 $('.mySlider').slick({
