Fixed it! Fixing image displays now.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 
 .mySlider
 {
-border: 1px solid green;
-max-width: 400px;
+max-height: 300px;
+max-width: 600px;
 margin: 0 auto;
 
 }
@@ -166,14 +166,14 @@ a{ /* This defines the nature of all the hyperlinks */
         </header>
     </div>
 
-<br><br>
+<br>
 
 <div class="mySlider">
   <div><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
   <div><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
   <div><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
 </div>
-<br><br>
+<br>
 <div id="tabs">
   <ul>
     <li><a href="#tabs-1">About</a></li>
