Changing more wrappings and borders.
edited mainly the css

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ h1 {
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
   font-family: 'Economica', sans-serif;
   font-size: 30px; 
-  margin-top: 20px;
+  margin-top: 10px;
   text-align: center; /* centers the header 2 */
   color: #696969;
-  margin: 0px 0 5px 0;
+  margin: 0px 0px 5px 0px;
 }
 
 h3 { /* This defines the nature of all the "header 3" portions, which is to say, every h3. */
@@ -166,6 +166,7 @@ a{ /* This defines the nature of all the hyperlinks */
         </header>
     </div>
 
+<br>
 <br>
 
 <div class="mySlider">
