More changs to css trying to figure this out

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ a{ /* This defines the nature of all the hyperlinks */
   <div><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
   <div><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
   <div><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
+  <div><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
+  <div><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
+  <div><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
 </div>
 
     </div>
