--- a/index.html
+++ b/index.html
@@ -78,10 +78,17 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 
 .mySlider
 {
-max-height: 100px;
-max-width: 600px;
+height: 100px;
+width: 600px;
 margin: 0 auto;
 
+}
+
+#sliderElement
+{
+height: 100px;
+width: 600px;
+margin: 0 auto;
 }
 
 /* jQueryUI */ 
@@ -165,12 +172,12 @@ a{ /* This defines the nature of all the hyperlinks */
           <h2>Programmer. Web Developer. Animator. Producer.</h2>
 
           <div class="mySlider">
-  <div><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
-  <div><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
-  <div><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
-  <div><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
-  <div><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
-  <div><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
+  <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
 </div>
 
         </header>
