--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 
 .mySlider
 {
+  padding: 2px;
 height: 100px;
-width: 100px;
+width: 1000px;
 margin: 0 auto;
 
 }
