yeah, no luck here.
hmm.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 {
 padding: 2px;
 height: 100px;
-width: 1000px;
+margin: 0 auto;
+
+}
+
+#sliderElement
+{
+padding: 2px;
+height: 100px;
 margin: 0 auto;
 
 }
