--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 
 .mySlider
 {
+  border: 1px solid green;
 padding: 2px;
 height: 100px;
 margin: 0 auto;
