--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@ margin: 0 auto;
 
 }
 
-#sliderElement
-{border: 1px solid yellow;
+#sliderElement{
+  border: 1px solid yellow;
 padding: 2px;
-height: 100px;
+max-width:100%; 
+max-height:100%;
 margin: 0 auto;
 
 }
