--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 border: 1px solid green;
 padding: 2px;
 height: 100px;
+width: 400px;
 margin: 0 auto;
 
 }
 
 #sliderElement{
-  border: 1px solid yellow;
+border: 1px solid yellow;
 padding: 2px;
 max-width:100%; 
 max-height:100%;
