Found out why it was messing up.
Again, there was a tag in the css that applied itself onto all images. I
have... corrected that error.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 border: 1px solid green;
 padding: 2px;
 height: 100px;
-width: 400px;
+width: 80%;
 margin: 0 auto;
 
 }
@@ -174,14 +174,8 @@ a{ /* This defines the nature of all the hyperlinks */
 <div id="header_wrap" class="outer">
         <header class="inner">
           <h1>Jason Chiu</h1>
-          <h2>Programmer. Web Developer. Animator. Producer.</h2>
 
-        </header>
-
-
-    </div>
-
- <div class="mySlider">
+           <div class="mySlider">
   <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
   <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
   <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
@@ -189,6 +183,13 @@ a{ /* This defines the nature of all the hyperlinks */
   <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/UwtD6WI.jpg" alt =""></a></div>
   <div id="sliderElement"><a href="#"><img src="http://i.imgur.com/PgCKVzx.jpg" alt =""></a></div>
 </div>
+          <h2>Programmer. Web Developer. Animator. Producer.</h2>
+
+        </header>
+
+
+    </div>
+
 <br>
 
 
