Almost to the core...
It was due to a silly mistake in order

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 border: 1px solid green;
 padding: 2px;
 height: 100px;
-width: 80%;
+width: auto;
 margin: 0 auto;
 
 }
