Added footer, editedheaderwrap to pinpoint error
Problems:
+ Still weird space on the top
+Footer is not centered

What I did:
~h1 and h2 on the top were nested into header tag, I removed it to see
if it was the div tag problem, or with the code I put in the css for the
webkits. I also removed a break after the header_wrap id to see if that
was the problem.
~ added footer tag and styled it to match header.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,15 @@
     a{ /* This defines the nature of all the hyperlinks */
       text-decoration: none; /* Remove the underline of the hyperlinks */
     }
+    footer{
+      color: rgb(143,250,255); /* Change to modify header 1 colors */
+      background: #DCDCDC;
+      text-align: center; /* centers header 2 */
+      font-family: 'Exo', sans-serif; /* set fonts for header 1 */
+      font-size: 20px; /* Change to modify header1 font size */
+    }
 /* ------------ Classes (.class) ------------------*/ 
-    .frame {
+    .myframe{
       height: 200px;
       width: 200px;
       background-size: cover; 
@@ -107,12 +114,9 @@
 
 <body vlink="yellow" link="yellow">
   <div id="header_wrap">
-    <header>
-      <h1>Jason Chiu</h1>
-      <h2>Programmer. Web Developer. Animator. Producer.</h2>
-    </header>
+    <h1>Jason Chiu</h1>
+    <h2>Programmer. Web Developer. Animator. Producer.</h2>
   </div>
-  <br>
   <!--
   <div class="mySlider">
     <div class="sliderItem"><a href="#"><img src="http://i.imgur.com/K0f1NVz.jpg" alt =""></a></div>
