Removed stuff from body tag, finding source.
Problems:
+ Still the irritating white spot near the top.
+ Footer text is hard to read. Very hard to read.

What I did:
~ Edited out most of the body tag, I'm thinking it's the line height
that is causing problems. Also, I set a height, that might also be a
problem.
~ Added what I have in the header wrap tag to the bottom tag.
~ I'm thinking that it could be with the gradient that is causing this
error, but I'll find out shortly. My guess is that it has something to
do with header and footer tag.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <style>
 /* ------------ General Tags ------------------*/
     body {
-      margin: 0 auto;
+      /*margin: 0 auto; */
       font-size: 16px; 
       font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
-      line-height: 1.5; /* Change this to modify line height in the body */
-      background: #F8F8FF; /* Change to modify background color */
+      /* line-height: 1.5;  Change this to modify line height in the body */ 
+      /*background: #F8F8FF;  Change to modify background color */ 
     }
     header{}
     p{} 
@@ -50,10 +50,14 @@
     }
     footer{
       color: rgb(143,250,255); /* Change to modify header 1 colors */
-      background: #DCDCDC;
       text-align: center; /* centers header 2 */
       font-family: 'Exo', sans-serif; /* set fonts for header 1 */
       font-size: 20px; /* Change to modify header1 font size */
+      background: -moz-linear-gradient(top, #373737, #212121);
+      background: -webkit-linear-gradient(top, #373737, #212121);
+      background: -ms-linear-gradient(top, #373737, #212121);
+      background: -o-linear-gradient(top, #373737, #212121);
+      background: linear-gradient(top, #373737, #212121);
     }
 /* ------------ Classes (.class) ------------------*/ 
     .myframe{
@@ -72,10 +76,10 @@
       margin: 0 auto;
     }
     .sliderItem{
-
     }
     /* ------------ ID (#id) ------------------*/ 
     #header_wrap{
+      height: 500px;
       background: #DCDCDC;
       background: -moz-linear-gradient(top, #373737, #212121);
       background: -webkit-linear-gradient(top, #373737, #212121);
