--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="description" content="Jason Chiu : Portfolio Site">
 <!-- -->
-  <link href='http://fonts.googleapis.com/css?family=Exo:100,500' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Exo:300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
   <link href="/jqueryui/jquery-ui.css" rel="stylesheet">
@@ -17,6 +17,7 @@
 /* ------------ General Tags ------------------*/
     body {
       /*margin: 0 auto; */
+       background: -webkit-linear-gradient(top, #373737, #212121);
       font-size: 16px; 
       font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
       /* line-height: 1.5;  Change this to modify line height in the body */ 
@@ -79,8 +80,7 @@
     }
     /* ------------ ID (#id) ------------------*/ 
     #header_wrap{
-      height: 500px;
-      background: #DCDCDC;
+      height: 200px;
       background: -moz-linear-gradient(top, #373737, #212121);
       background: -webkit-linear-gradient(top, #373737, #212121);
       background: -ms-linear-gradient(top, #373737, #212121);
